--- a/report/Thesis.tex
+++ b/report/Thesis.tex
@@ -18,6 +18,9 @@
 \usepackage{pgfgantt}
 \usepackage{nomencl}
 \usepackage[acronym]{glossaries}
+\usepackage{amsmath}
+\usepackage{algorithm}
+\usepackage{algpseudocode}
 
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{exa}{Example}[section]
