--- a/report/contents/appendix.tex
+++ b/report/contents/appendix.tex
@@ -1,3 +1,13 @@
 \appendix
 
 \chapter{Appendix} \label{ch:appendix}
+
+\section{DRL Algorithms} \label{sec:app_drl_algorithms}
+
+\subsection{Advantage Actor-Critic (A2C)} \label{sec:app_a2c}
+
+\begin{algorithm}
+\label{alg:a2c}
+\caption{Advantage Actor-Critic (A2C) Pseudo-code}
+\input{algorithms/alg_a2c.tex}
+\end{algorithm}
