Add list of algorithms

--- a/report/Thesis.tex
+++ b/report/Thesis.tex
@@ -82,6 +82,10 @@
 \listoftables
 \newpage
 
+%%%%% List of algorithms
+\listofalgorithms
+\newpage
+
 %%%%% Nomenclature
 \include{contents/nomenclature}
 \printnomenclature
