--- a/report/contents/appendix.tex
+++ b/report/contents/appendix.tex
@@ -1,13 +1,15 @@
 \appendix
 
-\chapter{Appendix} \label{ch:appendix}
-
-\section{DRL Algorithms} \label{sec:app_drl_algorithms}
-
-\subsection{Advantage Actor-Critic (A2C)} \label{sec:app_a2c}
+\chapter{DRL Algorithms} \label{ch:drl_algorithms}
 
 \begin{algorithm}
 \label{alg:a2c}
 \caption{Advantage Actor-Critic (A2C) Pseudo-code}
 \input{algorithms/alg_a2c.tex}
+\end{algorithm}
+
+\begin{algorithm}
+\label{alg:ppo}
+\caption{Proximal Policy Optimization (PPO-Clip) Pseudo-code}
+\input{algorithms/alg_ppo.tex}
 \end{algorithm}
