--- a/report/contents/glossary.tex
+++ b/report/contents/glossary.tex
@@ -51,9 +51,9 @@
     name=Advantage Actor-Critic,
     description={Algorithm that uses both an actor (policy) and a critic (value function) to learn optimal policies by estimating the advantage of actions taken}
 }
-\newglossaryentry{proximalpolicyoptimization}
+\newglossaryentry{proximalpolicyoptimisation}
 {
-    name=Proximal Policy Optimization,
+    name=Proximal Policy Optimisation,
     description={Algorithm that optimises policies by ensuring that updates to the policy are not too large, maintaining a balance between exploration and exploitation}
 }
 \newglossaryentry{deepdeterministicpolicygradient}
@@ -139,7 +139,7 @@
 \newacronym{rl}{RL}{\Gls{reinforcementlearning}}
 \newacronym{drl}{DRL}{\Gls{deepreinforcementlearning}}
 \newacronym{a2c}{A2C}{\Gls{advantageactorcritic}}
-\newacronym{ppo}{PPO}{\Gls{proximalpolicyoptimization}}
+\newacronym{ppo}{PPO}{\Gls{proximalpolicyoptimisation}}
 \newacronym{ddpg}{DDPG}{\Gls{deepdeterministicpolicygradient}}
 \newacronym{td3}{TD3}{\Gls{twindelayeddeepdeterministicpolicygradient}}
 \newacronym{sac}{SAC}{\Gls{softactorcritic}}
@@ -153,3 +153,4 @@
 \newacronym{pomdp}{POMDP}{\Gls{partiallyobservablemarkovdecisionprocess}}
 \newacronym{dqn}{DQN}{Deep Q-Network}
 \newacronym{a3c}{A3C}{Asynchronous Advantage Actor-Critic}
+\newacronym{trpo}{TRPO}{Trust Region Policy Optimisation}
