Update appendix structure

--- a/report/Thesis.tex
+++ b/report/Thesis.tex
@@ -122,7 +122,6 @@
 \bibliography{bibliography} 
 
 %%%%%% Appendices
-\include{contents/appendix}
-
+\include{appendix/drl_algorithms}
 
 \end{document}
