Add DDPG Algorithm

--- a/report/appendix/drl_algorithms.tex
+++ b/report/appendix/drl_algorithms.tex
@@ -10,6 +10,12 @@
 
 \begin{algorithm}
 \label{alg:ppo}
-\caption{Proximal Policy Optimization (PPO-Clip) Pseudo-code}
+\caption{Proximal Policy Optimization (PPO) Pseudo-code}
 \input{algorithms/alg_ppo.tex}
+\end{algorithm}
+
+\begin{algorithm}
+\label{alg:ddpg}
+\caption{Deep Deterministic Policy Gradient (DDPG) Pseudo-code}
+\input{algorithms/alg_ddpg.tex}
 \end{algorithm}
