--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -471,6 +471,21 @@
   url         = {https://www.ri.cmu.edu/publications/efficient-exploration-in-reinforcement-learning/},
   year        = {1992}
 }
+@article{Uhlenbeck1930,
+  abstract  = {With a method first indicated by Ornstein the mean values of all the powers of the velocity u and the displacement s of a free particle in Brownian motion are calculated. It is shown that u-u0exp(-βt) and s-u0β[1-exp(-βt)] where u0 is the initial velocity and β the friction coefficient divided by the mass of the particle, follow the normal Gaussian distribution law. For s this gives the exact frequency distribution corresponding to the exact formula for s2 of Ornstein and Fürth. Discussion is given of the connection with the Fokker-Planck partial differential equation. By the same method exact expressions are obtained for the square of the deviation of a harmonically bound particle in Brownian motion as a function of the time and the initial deviation. Here the periodic, aperiodic and overdamped cases have to be treated separately. In the last case, when β is much larger than the frequency and for values of tβ-1, the formula takes the form of that previously given by Smoluchowski. © 1930 The American Physical Society.},
+  author    = {G. E. Uhlenbeck and L. S. Ornstein},
+  doi       = {10.1103/PhysRev.36.823},
+  issn      = {0031899X},
+  issue     = {5},
+  journal   = {Physical Review},
+  month     = {9},
+  pages     = {823},
+  publisher = {American Physical Society},
+  title     = {On the Theory of the Brownian Motion},
+  volume    = {36},
+  url       = {https://journals.aps.org/pr/abstract/10.1103/PhysRev.36.823},
+  year      = {1930}
+}
 @article{Wu2017,
   abstract  = {In this work, we propose to apply trust region optimization to deep reinforcement learning using a recently proposed Kronecker-factored approximation to the curvature. We extend the framework of natural policy gradient and propose to optimize both the actor and the critic using Kronecker-factored approximate curvature (K-FAC) with trust region; hence we call our method Actor Critic using Kronecker-Factored Trust Region (ACKTR). To the best of our knowledge, this is the first scalable trust region natural gradient method for actor-critic methods. It is also a method that learns non-trivial tasks in continuous control as well as discrete control policies directly from raw pixel inputs. We tested our approach across discrete domains in Atari games as well as continuous domains in the MuJoCo environment. With the proposed methods, we are able to achieve higher rewards and a 2- to 3-fold improvement in sample efficiency on average, compared to previous state-of-the-art on-policy actor-critic methods. Code is available at https://github.com/openai/baselines},
   author    = {Yuhuai Wu and Elman Mansimov and Shun Liao and Roger Grosse and Jimmy Ba},
