--- a/report/contents/glossary.tex
+++ b/report/contents/glossary.tex
@@ -154,3 +154,4 @@
 \newacronym{dqn}{DQN}{Deep Q-Network}
 \newacronym{a3c}{A3C}{Asynchronous Advantage Actor-Critic}
 \newacronym{trpo}{TRPO}{Trust Region Policy Optimisation}
+\newacronym{dpg}{DPG}{Deterministic Policy Gradient}
