--- a/report/appendix/drl_algorithms.tex
+++ b/report/appendix/drl_algorithms.tex
@@ -19,3 +19,15 @@
 \caption{Deep Deterministic Policy Gradient (DDPG) Pseudo-code}
 \input{algorithms/alg_ddpg.tex}
 \end{algorithm}
+
+\begin{algorithm}
+\label{alg:td3}
+\caption{Twin Delayed Deep Deterministic Policy Gradient (TD3) Pseudo-code}
+\input{algorithms/alg_td3.tex}
+\end{algorithm}
+
+\begin{algorithm}
+\label{alg:sac}
+\caption{Soft Actor-Critic (SAC) Pseudo-code}
+\input{algorithms/alg_sac.tex}
+\end{algorithm}
